force-app/main/default/objects/User/fields/ApplicableRoles__c.field-meta.xml
<CustomField>
    <fullName>ApplicableRoles__c</fullName>
    <description>Roles returned from KOG, which this user can play. User needs to select one role to proceed accesing SSP</description>
    <label>Applicable Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assister</fullName>
                <label>kynector</label>
            </value>
            <value>
                <fullName>Citizen_Individual</fullName>
                <label>Citizen</label>
            </value>
            <value>
                <fullName>Agency_Admin</fullName>
                <label>Agency Admin</label>
            </value>
            <value>
                <fullName>CHFS_Prod_Support</fullName>
                <label>CHFS Prod Support</label>
            </value>
            <value>
                <fullName>Contact_Center_View_and_Edit</fullName>
                <label>Contact Center (View and Edit)</label>
            </value>
            <value>
                <fullName>Contact_Center_View_Only</fullName>
                <label>Contact Center (View Only)</label>
            </value>
            <value>
                <fullName>DAIL_Worker</fullName>
                <label>DAIL Worker</label>
            </value>
            <value>
                <fullName>DCBS_View_Only</fullName>
                <label>DCBS - View Only</label>
            </value>
            <value>
                <fullName>DCBS_Central_Office_View_and_Edit</fullName>
                <label>DCBS Central Office - View &amp; Edit</label>
            </value>
            <value>
                <fullName>Department_Of_Education_Representative</fullName>
                <label>Department of Education Representative</label>
            </value>
            <value>
                <fullName>DJJ_Representative</fullName>
                <label>DJJ Representative</label>
            </value>
            <value>
                <fullName>DOC_Representative</fullName>
                <label>DOC Representative</label>
            </value>
            <value>
                <fullName>Eligibility_&amp;_Benefit_Inquiry_User</fullName>
                <label>Eligibility &amp; Benefit Inquiry User</label>
            </value>
            <value>
                <fullName>Individual_Auth_Rep</fullName>
                <label>Individual Authorized Representative</label>
            </value>
            <value>
                <fullName>Insurance_Agent</fullName>
                <label>Agent</label>
            </value>
            <value>
                <fullName>Jailor</fullName>
            </value>
            <value>
                <fullName>Mail_Center_Supervisor</fullName>
                <label>Mail Center Supervisor</label>
            </value>
            <value>
                <fullName>Mail_Center_Worker</fullName>
                <label>Mail Center Worker</label>
            </value>
            <value>
                <fullName>Organization_Auth_Rep</fullName>
                <label>Organization Authorized Representative</label>
            </value>
            <value>
                <fullName>Psychiatric_Facility_Representative</fullName>
                <label>Psychiatric Facility Representative</label>
            </value>
            <value>
                <fullName>QE_Hospital</fullName>
                <label>QEHospital</label>
            </value>
            <value>
                <fullName>QE_Pregnancy</fullName>
                <label>QEPregnancy</label>
            </value>
            <value>
                <fullName>APPLICATION_INITIATOR</fullName>
                <label>Application Initiator</label>
            </value>
            <value>
                <fullName>APPLICATION_REVIEWER</fullName>
                <label>APPLICATION REVIEWER</label>
            </value>
            <value>
                <fullName>CASE_MANAGEMENT_ADMINISTRATOR_INTERNAL</fullName>
                <label>Case Management Administrator (Internal)</label>
            </value>
            <value>
                <fullName>WAIVER_CAPACITY_REVIEWER</fullName>
                <label>Waiver Capacity Reviewer</label>
            </value>
            <value>
                <fullName>CASE_MANAGER</fullName>
                <label>Case Manager</label>
            </value>
            <value>
                <fullName>CASE_SUPERVISOR</fullName>
                <label>Case Supervisor</label>
            </value>
            <value>
                <fullName>CHFS_APPLICATION_INITIATOR</fullName>
                <label>CHFS Application Initiator</label>
            </value>
            <value>
                <fullName>LEVEL_OF_CARE_ASSESSOR</fullName>
                <label>Level of Care Assessor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>