force-app/main/default/objects/User/fields/CacheBenefitProgramData__c.field-meta.xml
<CustomField>
    <fullName>CacheBenefitProgramData__c</fullName>
    <description>Used to store the response data to show in Dashboard.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cache Benefit Program Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>