force-app/main/default/objects/User/fields/CacheDashboardData__c.field-meta.xml
<CustomField>
    <fullName>CacheDashboardData__c</fullName>
    <description>Used to store the response data to show in Dashboard.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cache Dashboard Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>