force-app/main/default/objects/User/fields/ImpersonatedIndividualId__c.field-meta.xml
<CustomField>
    <fullName>ImpersonatedIndividualId__c</fullName>
    <description>Individual Id impersonated after client search by this user</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Individual Id impersonated after client search by this user</inlineHelpText>
    <label>Impersonated Individual Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>