force-app/main/default/objects/User/fields/IsOnboardTrainingDone__c.field-meta.xml
<CustomField>
    <fullName>IsOnboardTrainingDone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It checks weather CP User and Assister  On-boarding training is done or not.</description>
    <label>IsOnboardTrainingDone</label>
    <type>Checkbox</type>
</CustomField>