force-app/main/default/objects/User/fields/KOG_Role__c.field-meta.xml
<CustomField>
    <fullName>KOG_Role__c</fullName>
    <label>KOG Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>