force-app/main/default/objects/User/fields/LastVisitedNonCitizenRole__c.field-meta.xml
<CustomField>
    <fullName>LastVisitedNonCitizenRole__c</fullName>
    <description>To store last visited non citizen role</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Visited Non Citizen Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>