force-app/main/default/objects/User/fields/One_Time_Activity__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used in the process builder to update when User is added to a Public Group.</description>
    <label>One Time Activity</label>
    <type>Checkbox</type>
</CustomField>