force-app/main/default/objects/User/fields/RE_Selected_Role__c.field-meta.xml
<CustomField>
    <fullName>RE_Selected_Role__c</fullName>
    <description>Role selected by user from applicable roles.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Role selected by user from applicable roles.</inlineHelpText>
    <label>RE Selected Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>