force-app/main/default/objects/User/fields/RE_Selected_Role_Formula__c.field-meta.xml
<CustomField>
    <fullName>RE_Selected_Role_Formula__c</fullName>
    <formula>IF( 
    OR(INCLUDES(ApplicableRoles__c, &apos;Community Partner Admin&apos;),
       INCLUDES(ApplicableRoles__c, &apos;Community Partner Staff&apos;)) , &apos;Community Partner&apos;,  
IF( OR(INCLUDES(ApplicableRoles__c, &apos;Case Worker Supervisor&apos;),
       INCLUDES(ApplicableRoles__c, &apos;Case Worker&apos;)) ,&apos;Agency Users&apos; ,  
IF(INCLUDES(ApplicableRoles__c, &apos;Assister&apos;), &apos;Assister&apos;,  
IF(INCLUDES(ApplicableRoles__c, &apos;Citizen_Individual&apos;), &apos;Citizen&apos;,  
IF(INCLUDES(ApplicableRoles__c, &apos;RE United Way Staff&apos;), &apos;UW Staff&apos;, &apos;&apos;) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>