force-app/main/default/objects/User/fields/ShowCitizenDashboard__c.field-meta.xml
<CustomField>
    <fullName>ShowCitizenDashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if citizen dashboard is to be shown for Non Citizen users</description>
    <label>Show Citizen Dashboard</label>
    <type>Checkbox</type>
</CustomField>