force-app/main/default/objects/User/fields/SspRole_fx__c.field-meta.xml
<CustomField>
    <fullName>SspRole_fx__c</fullName>
    <description>Formula field to display SSP Role. This is a workaround field to get application created by user role. This needs to be deprecated once Application object starts storing the user role.</description>
    <formula>IF( Profile.Name = &apos;RE Citizen Profile&apos;, &apos;Citizen&apos;,  SelectedRole__c)</formula>
    <inlineHelpText>Formula field to display SSP Role. This is a workaround field to get application created by user role. This needs to be deprecated once Application object starts storing the user role.</inlineHelpText>
    <label>SSP Role</label>
    <type>Text</type>
</CustomField>