force-app/main/default/objects/User/fields/UPNId__c.field-meta.xml
<CustomField>
    <fullName>UPNId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>UPNId</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>