force-app/main/default/objects/User/fields/UserAgreementConsentDate__c.field-meta.xml
<CustomField>
    <fullName>UserAgreementConsentDate__c</fullName>
    <label>User Agreement Consent Date</label>
    <type>Date</type>
</CustomField>