force-app/main/default/objects/User/fields/UserAgreementVersion__c.field-meta.xml
<CustomField>
    <fullName>UserAgreementVersion__c</fullName>
    <description>user agreement version is updated whenever user checks the agreement consent.</description>
    <inlineHelpText>user agreement version is updated whenever user checks the agreement consent.</inlineHelpText>
    <label>User Agreement Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>