force-app/main/default/objects/User/fields/Waiver_OrgId__c.field-meta.xml
<CustomField>
    <fullName>Waiver_OrgId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waiver OrgId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>