force-app/main/default/objects/User/fields/Waiver_UserId__c.field-meta.xml
<CustomField>
    <fullName>Waiver_UserId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waiver UserId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>