force-app/main/default/objects/User/listViews/Community_Users.listView-meta.xml
<ListView>
    <fullName>Community_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>CORE.PROFILE.NAME</field>
        
            <operation>equals</operation>
        
            <value>RE Community Partner User Profile</value>
        
        </filters>
    <label>Community Users</label>
</ListView>